Сброс пароля через почту

--- a/templates/reset_password/password_reset_confirm.html
+++ b/templates/reset_password/password_reset_confirm.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load i18n static %}
 {% block title %}
-{% trans 'Авторизация' %}
+{% trans 'Сброс пароля' %}
 {% endblock %}
 
 {% block content %}
@@ -10,7 +10,6 @@
 			<div class="row">
 				<div class="col-12">
 					<div class="sign__content">
-						<!-- authorization form -->
 						<form class="sign__form" method="post">
                             {% csrf_token %}
 							<a href="{% url 'home' %}" class="sign__logo">
@@ -28,25 +27,11 @@
 								{% endfor %}
 								{% endif %}
 							<div class="sign__group">
-								{{ form.username }}
+								{{ form }}
 							</div>
 
-							<div class="sign__group">
-                                {{ form.password }}
-							</div>
-
-							<div class="sign__group sign__group--checkbox">
-								<input id="remember" name="remember" type="checkbox" checked="checked">
-								<label for="remember">{% trans 'Запомнить меня' %}</label>
-							</div>
-
-							<button class="sign__btn" type="submit">{% trans 'Войти' %}</button>
-
-							<span class="sign__text">{% trans 'Еще нет аккаунта?' %} <a href="{% url 'register' %}">{% trans 'Зарегистрироваться!' %}</a></span>
-
-							<span class="sign__text"><a href="{% url 'password_reset' %}">{% trans 'Забыли пароль?' %}</a></span>
+							<button class="sign__btn" type="submit">{% trans 'Изменить пароль' %}</button>
 						</form>
-						<!-- end authorization form -->
 					</div>
 				</div>
 			</div>
