--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3800,3 +3800,21 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
   opacity: 0.85;
   color: #fff;
 }
+.password_reset-values{
+  color: #f8f8f2;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.sign__group label{
+  display: flex;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 16px;
+  margin-top: 20px;
+
+}
+.helptext {
+  color: #ffffff;
+}
