оптимизация запросов к БД

--- a/web_site/templates/web_site/catalog_movies.html
+++ b/web_site/templates/web_site/catalog_movies.html
@@ -125,7 +125,7 @@
                                     </form>
                                 </span>
                                 <span class="card__rate"><i
-                                        class="icon ion-ios-star"></i>{% get_movie_rating movie.id %}</span>
+                                        class="icon ion-ios-star"></i>{{ movie.kinopoisk_rating }}</span>
                             </div>
                         </div>
 
