оптимизация запросов к БД на сингл странице

--- a/web_site/templates/web_site/catalog_movies.html
+++ b/web_site/templates/web_site/catalog_movies.html
@@ -43,7 +43,7 @@
 
                                 <div class="filter__item-btn dropdown-toggle" role="navigation" id="filter-genre"
                                      data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <input type="text" name="genre" value="{% trans 'Жанр' %}">
+                                    <input type="text" name="genre" value="{% trans 'Жанр' %}" autocomplete="off">
 
                                     <span></span>
                                 </div>
@@ -59,7 +59,7 @@
 
                                 <div class="filter__item-btn dropdown-toggle" role="navigation" id="filter-year"
                                      data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <input type="text" name="year" value="{% trans 'Год' %}">
+                                    <input type="text" name="year" value="{% trans 'Год' %}" autocomplete="off">
                                     <span></span>
                                 </div>
                                 <ul class="filter__item-menu dropdown-menu scrollbar-dropdown"
@@ -75,7 +75,7 @@
 
                                 <div class="filter__item-btn dropdown-toggle" role="navigation" id="filter-country"
                                      data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <input type="text" name="country" value="{% trans 'Страна' %}">
+                                    <input type="text" name="country" value="{% trans 'Страна' %}" autocomplete="off">
                                     <span></span>
                                 </div>
                                 <ul class="filter__item-menu dropdown-menu scrollbar-dropdown"
