--- a/templates/inc/_header.html
+++ b/templates/inc/_header.html
@@ -100,7 +100,7 @@
                 <div class="col-12">
                     <div class="header__search-content">
                         <input type="search" placeholder="Введите название ..." name="q" >
-                        <button type="submit">{% trans 'Поиск' %}</button>
+                        <button type="submit" name="submit_button">{% trans 'Поиск' %}</button>
                     </div>
                 </div>
             </div>
